--- a/StoreManagement/Views/Category/Index.cshtml
+++ b/StoreManagement/Views/Category/Index.cshtml
@@ -199,6 +199,7 @@
                 </div>
             </div>
         </div>
+        <script src="~/js/Toast.js"></script>
         <script src="~/js/Category.js"></script>
     </body>
     </html>
