--- a/StoreManagement/Views/PersonalInfo/Index.cshtml
+++ b/StoreManagement/Views/PersonalInfo/Index.cshtml
@@ -21,6 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 
@@ -103,11 +104,11 @@
                                 <input type="hidden" id="userId" value="@Model.UserId" />
                                 <div class="mb-3">
                                     <label class="form-label">Họ và tên</label>
-                                    <input type="text" class="form-control" id="fullname" name="fullname" value="@Model.FullName" placeholder="Nhập họ tên">
+                                    <input type="text" class="form-control" id="fullname" name="fullname" value="@Model.FullName">
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Tên đăng nhập</label>
-                                    <input type="text" class="form-control" id="username" value="@Model.Username" readonly>
+                                    <input type="text" class="form-control" id="username" name="username" value="@Model.Username">
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Quyền</label>
@@ -145,6 +146,7 @@
             </div>
         </div>
     </div>
+    <script src="~/js/Toast.js"></script>
     <script src="~/js/PersonalInfo.js"></script>
 </body>
 </html>
