Update: Supplier + Category

--- a/StoreManagement/Views/Shared/_Sidebar.cshtml
+++ b/StoreManagement/Views/Shared/_Sidebar.cshtml
@@ -1,39 +1,35 @@
 ﻿<!-- Sidebar bên trái -->
 <div class="sidebar d-flex flex-column pt-3">
     <nav class="nav flex-column mt-2">
-        <a class="nav-link " href="./Account">
+        <a class="nav-link " asp-controller="Account" asp-action="Index">
             <i class="bi bi-people-fill text-primary"></i>
             <span>Quản lý tài khoản</span>
         </a>
-        <a class="nav-link" href="./Customer">
+        <a class="nav-link" asp-controller="Customer" asp-action="Index">
             <i class="bi bi-person-lines-fill text-primary"></i>
             <span>Quản lý khách hàng</span>
         </a>
-        <a class="nav-link" href="./Product">
+        <a class="nav-link" asp-controller="Product" asp-action="Index">
             <i class="bi bi-box-seam text-primary"></i>
             <span>Quản lý sản phẩm</span>
         </a>
-        <a class="nav-link" href="./Category">
+        <a class="nav-link" asp-controller="Category" asp-action="Index">
             <i class="bi bi-tags-fill text-primary"></i>
             <span>Quản lý loại sản phẩm</span>
         </a>
-        <a class="nav-link active" href="./Supplier">
+        <a class="nav-link active" asp-controller="Supplier" asp-action="Index">
             <i class="bi bi-truck text-primary"></i>
             <span>Quản lý nhà cung cấp</span>
         </a>
-        <a class="nav-link" href="./Promotion">
+        <a class="nav-link" asp-controller="Promotion" asp-action="Index">
             <i class="bi bi-gift-fill text-primary"></i>
             <span>Quản lý khuyến mãi</span>
         </a>
-        <a class="nav-link" href="./OrderManager">
+        <a class="nav-link" asp-controller="Order" asp-action="Index">
             <i class="bi bi-receipt-cutoff text-primary"></i>
             <span>Quản lý đơn hàng</span>
         </a>
-        <a class="nav-link" href="./GoodsReceiveNote">
-            <i class="bi bi-journal-plus text-primary"></i>
-            <span>Quản lý phiếu nhập</span>
-        </a>
-        <a class="nav-link" href="./Statistic">
+        <a class="nav-link" asp-controller="Statistic" asp-action="Index">
             <i class="bi bi-bar-chart-line-fill text-primary"></i>
             <span>Thống kê</span>
         </a>
