--- a/StoreManagement/Views/Supplier/Index.cshtml
+++ b/StoreManagement/Views/Supplier/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<!-- Nội dung chính -->
+﻿@{
+    ViewData["Title"] = "Nhà cung cấp";
+} 
+<!-- Nội dung chính -->
     <div class="container-fluid p-4">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h3 class="fw-bold">Quản lý Nhà cung cấp</h3>   
