thống kê, product, đơn hàng, đăng nhập (update)

--- a/StoreManagement/Views/Auth/Login.cshtml
+++ b/StoreManagement/Views/Auth/Login.cshtml
@@ -26,7 +26,11 @@
 </head>
 
 <body class="body-login">
-
+    <div id="loadingOverlay" class="loading-overlay d-none">
+        <div class="spinner-border text-light" role="status" style="width: 3rem; height: 3rem;">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
     <div class="login-card">
         <div class="brand">
             <i class="bi bi-shop"></i>
